frontend/fixtures/warning-policy/multiple-import.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
  labels:
    app: httpd
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: test 
      image: 'image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest'
      ports:
        - containerPort: 8080
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
---           
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testdeploy
  annotations: {}
spec:
  selector:
    matchLabels:
      app: deploy1
  replicas: 1 
  template:
    metadata:
      labels:
        app: deploy1
    spec:
      containers:
        - name: test
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
